# cmd/palace/internal/biz/do/system/resource.go
@@ -9,13 +9,12 @@ const tableNameResource = "sys_resources"
 
 type Resource struct {
 	do.BaseModel
-	Name   string              `gorm:"column:name;type:varchar(64);not null;uniqueIndex:idx__api__name,priority:1;comment:api名称" json:"name"`
-	Path   string              `gorm:"column:path;type:varchar(255);not null;uniqueIndex:idx__api__path,priority:1;comment:api路径" json:"path"`
-	Status vobj.GlobalStatus   `gorm:"column:status;type:tinyint(2);not null;comment:状态" json:"status"`
-	Domain vobj.ResourceDomain `gorm:"column:domain;type:tinyint(2);not null;comment:领域" json:"domain"`
-	Module vobj.ResourceDomain `gorm:"column:module;type:tinyint(2);not null;comment:模块" json:"module"`
-	Allow  vobj.ResourceAllow  `gorm:"column:allow;type:tinyint(2);not null;comment:放行规则" json:"allow"`
-	Remark string              `gorm:"column:remark;type:varchar(255);not null;comment:备注" json:"remark"`
+	Name   string             `gorm:"column:name;type:varchar(64);not null;uniqueIndex:idx__api__name,priority:1;comment:api名称" json:"name"`
+	Path   string             `gorm:"column:path;type:varchar(255);not null;uniqueIndex:idx__api__path,priority:1;comment:api路径" json:"path"`
+	Status vobj.GlobalStatus  `gorm:"column:status;type:tinyint(2);not null;comment:状态" json:"status"`
+	Allow  vobj.ResourceAllow `gorm:"column:allow;type:tinyint(2);not null;comment:放行规则" json:"allow"`
+	Remark string             `gorm:"column:remark;type:varchar(255);not null;comment:备注" json:"remark"`
+	MenuID uint32             `gorm:"column:menu_id;type:int unsigned;not null;comment:菜单id" json:"menuID"`
 }
 
 func (u *Resource) TableName() string {
