# cmd/palace/internal/server/swagger/openapi.yaml
@@ -133,6 +133,25 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/api.palace.LoginReply'
+    /api/auth/self/menu/tree:
+        post:
+            tags:
+                - Auth
+            description: GetSelfMenuTree returns the menu tree
+            operationId: Auth_GetSelfMenuTree
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/api.palace.common.EmptyRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/api.palace.GetSelfMenuTreeReply'
     /api/auth/verify/email:
         post:
             tags:
@@ -190,25 +209,32 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/api.palace.ListResourceReply'
-    /api/resource/save:
-        put:
+    /api/resource/menu/tree:
+        get:
             tags:
                 - Resource
-            description: SaveResource saves a new resource or updates an existing one
-            operationId: Resource_SaveResource
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/api.palace.SaveResourceRequest'
-                required: true
+            description: GetResourceMenuTree returns the menu tree
+            operationId: Resource_GetResourceMenuTree
             responses:
                 "200":
                     description: OK
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/api.palace.common.EmptyReply'
+                                $ref: '#/components/schemas/api.palace.GetResourceMenuTreeReply'
+    /api/resource/team/menu/tree:
+        get:
+            tags:
+                - Resource
+            description: GetTeamResourceMenuTree returns the menu tree
+            operationId: Resource_GetTeamResourceMenuTree
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/api.palace.GetResourceMenuTreeReply'
     /api/resource/{id}:
         get:
             tags:
@@ -230,26 +256,6 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/api.palace.GetResourceReply'
-        delete:
-            tags:
-                - Resource
-            description: DeleteResource deletes a resource by ID
-            operationId: Resource_DeleteResource
-            parameters:
-                - name: id
-                  in: path
-                  description: ID of the resource to delete
-                  required: true
-                  schema:
-                    type: integer
-                    format: uint32
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/api.palace.common.EmptyReply'
     /api/system/operate/log/list:
         post:
             tags:
@@ -1516,6 +1522,15 @@ components:
                     type: string
                     description: Filing information
             description: GetFilingInformationReply contains the response data for getting the filing information
+        api.palace.GetResourceMenuTreeReply:
+            type: object
+            properties:
+                items:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/api.palace.common.MenuTreeItem'
+                    description: List of menu items
+            description: GetMenuTreeReply contains the response data for retrieving the menu tree
         api.palace.GetResourceReply:
             type: object
             properties:
@@ -1524,6 +1539,15 @@ components:
                         - $ref: '#/components/schemas/api.palace.common.ResourceItem'
                     description: Detailed information about the resource
             description: GetResourceReply contains the response data for retrieving a resource
+        api.palace.GetSelfMenuTreeReply:
+            type: object
+            properties:
+                items:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/api.palace.common.MenuTreeItem'
+                    description: Menu tree data
+            description: GetSelfMenuTreeReply contains the response data for getting the menu tree
         api.palace.GetSystemRoleReply:
             type: object
             properties:
@@ -1743,6 +1767,8 @@ components:
                     items:
                         $ref: '#/components/schemas/api.palace.common.ResourceItem'
                     description: List of resource items
+                pagination:
+                    $ref: '#/components/schemas/api.palace.common.PaginationReply'
             description: ListResourceReply contains the response data for listing resources
         api.palace.ListResourceRequest:
             type: object
@@ -1753,21 +1779,11 @@ components:
                         type: integer
                         format: enum
                     description: List of statuses to filter resources by
-                module:
-                    type: array
-                    items:
-                        type: integer
-                        format: enum
-                    description: List of modules to filter resources by
-                domain:
-                    type: array
-                    items:
-                        type: integer
-                        format: enum
-                    description: List of domains to filter resources by
                 keyword:
                     type: string
                     description: Keyword to search resources by
+                pagination:
+                    $ref: '#/components/schemas/api.palace.common.PaginationRequest'
             description: ListResourceRequest represents the request data for listing resources
         api.palace.ListTeamDashboardChartReply:
             type: object
@@ -2050,35 +2066,6 @@ components:
                     description: id of the email configuration
                     format: uint32
             description: SaveEmailConfigRequest represents the request data for saving or updating the email configuration
-        api.palace.SaveResourceRequest:
-            type: object
-            properties:
-                name:
-                    type: string
-                    description: Resource name
-                path:
-                    type: string
-                    description: Resource path
-                remark:
-                    type: string
-                    description: Resource remark or description
-                module:
-                    type: integer
-                    description: Resource module
-                    format: enum
-                domain:
-                    type: integer
-                    description: Resource domain
-                    format: enum
-                id:
-                    type: integer
-                    description: Resource ID, optional for new resources
-                    format: uint32
-                allow:
-                    type: integer
-                    description: Resource allow
-                    format: enum
-            description: SaveResourceRequest represents the request data for saving or updating a resource
         api.palace.SaveRoleRequest:
             type: object
             properties:
@@ -2538,6 +2525,31 @@ components:
             type: object
             properties: {}
             description: EmptyRequest represents an empty request, typically used for operations that do not require input parameters.
+        api.palace.common.MenuTreeItem:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    description: Unique identifier for the menu tree item
+                    format: uint32
+                name:
+                    type: string
+                    description: Name of the menu tree item
+                path:
+                    type: string
+                    description: Path of the menu tree item
+                status:
+                    type: integer
+                    description: Status of the menu tree item
+                    format: enum
+                icon:
+                    type: string
+                    description: Icon of the menu tree item
+                children:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/api.palace.common.MenuTreeItem'
+                    description: children of the menu tree item
         api.palace.common.OperateLogItem:
             type: object
             properties:
@@ -2636,14 +2648,6 @@ components:
                 updatedAt:
                     type: string
                     description: Last update time of the API resource
-                module:
-                    type: integer
-                    description: Module to which the API resource belongs
-                    format: enum
-                domain:
-                    type: integer
-                    description: Domain of the API resource
-                    format: enum
             description: system-api
         api.palace.common.SelectItem:
             type: object
